[gd_scene load_steps=28 format=3 uid="uid://l8ac4brpjw4e"]

[ext_resource type="Script" uid="uid://8x5bpu1e1ade" path="res://expressions/initial-survey/initial_survey.gd" id="1_xctqj"]
[ext_resource type="PackedScene" uid="uid://nq8gdevpk1lg" path="res://expressions/expression-looper/Expression-Looper.tscn" id="2_ls3yg"]
[ext_resource type="Theme" uid="uid://g2n5hnjd4b6c" path="res://expressions/initial-survey/minimal_theme.tres" id="3_4llc6"]

[sub_resource type="InputEventKey" id="InputEventKey_ls3yg"]
device = -1
keycode = 49
unicode = 49

[sub_resource type="InputEventKey" id="InputEventKey_y5oke"]
device = -1
keycode = 74
unicode = 106

[sub_resource type="Shortcut" id="Shortcut_4llc6"]
resource_local_to_scene = true
events = [SubResource("InputEventKey_ls3yg"), SubResource("InputEventKey_y5oke")]

[sub_resource type="InputEventKey" id="InputEventKey_4llc6"]
device = -1
keycode = 50
unicode = 50

[sub_resource type="InputEventKey" id="InputEventKey_22e17"]
device = -1
keycode = 69
unicode = 101

[sub_resource type="InputEventKey" id="InputEventKey_4vsh6"]
device = -1
shift_pressed = true
keycode = 49
unicode = 33

[sub_resource type="Shortcut" id="Shortcut_x7xal"]
events = [SubResource("InputEventKey_4llc6"), SubResource("InputEventKey_22e17"), SubResource("InputEventKey_4vsh6")]

[sub_resource type="InputEventKey" id="InputEventKey_rw2dl"]
device = -1
keycode = 51
unicode = 51

[sub_resource type="InputEventKey" id="InputEventKey_17npo"]
device = -1
keycode = 83
unicode = 115

[sub_resource type="Shortcut" id="Shortcut_y5oke"]
events = [SubResource("InputEventKey_rw2dl"), SubResource("InputEventKey_17npo")]

[sub_resource type="InputEventKey" id="InputEventKey_6nmrw"]
device = -1
keycode = 52
unicode = 52

[sub_resource type="InputEventKey" id="InputEventKey_kif2j"]
device = -1
keycode = 65
unicode = 97

[sub_resource type="Shortcut" id="Shortcut_22e17"]
events = [SubResource("InputEventKey_6nmrw"), SubResource("InputEventKey_kif2j")]

[sub_resource type="InputEventKey" id="InputEventKey_eefo3"]
device = -1
keycode = 53
unicode = 53

[sub_resource type="InputEventKey" id="InputEventKey_3i5bf"]
device = -1
keycode = 70
unicode = 102

[sub_resource type="Shortcut" id="Shortcut_4vsh6"]
events = [SubResource("InputEventKey_eefo3"), SubResource("InputEventKey_3i5bf")]

[sub_resource type="InputEventKey" id="InputEventKey_el3pk"]
device = -1
keycode = 54
unicode = 54

[sub_resource type="InputEventKey" id="InputEventKey_bcyel"]
device = -1
keycode = 76
unicode = 108

[sub_resource type="Shortcut" id="Shortcut_17npo"]
events = [SubResource("InputEventKey_el3pk"), SubResource("InputEventKey_bcyel")]

[sub_resource type="InputEventKey" id="InputEventKey_x7xal"]
device = -1
keycode = 55
unicode = 55

[sub_resource type="InputEventKey" id="InputEventKey_hmunj"]
device = -1
keycode = 85
unicode = 117

[sub_resource type="InputEventKey" id="InputEventKey_ny5od"]
device = -1
shift_pressed = true
keycode = 47
unicode = 63

[sub_resource type="InputEventKey" id="InputEventKey_k3t18"]
device = -1
keycode = 32
unicode = 32

[sub_resource type="Shortcut" id="Shortcut_rw2dl"]
events = [SubResource("InputEventKey_x7xal"), SubResource("InputEventKey_hmunj"), SubResource("InputEventKey_ny5od"), SubResource("InputEventKey_k3t18")]

[node name="InitialSurvey" type="Node3D"]
script = ExtResource("1_xctqj")

[node name="ExpressionLooper" parent="." instance=ExtResource("2_ls3yg")]

[node name="ButtonsContainer" parent="ExpressionLooper/Panel/MarginContainer/VBoxContainer" index="2"]
visible = false

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("3_4llc6")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 8

[node name="ButtonContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 48
alignment = 1

[node name="JoyButton" type="Button" parent="PanelContainer/MarginContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
shortcut = SubResource("Shortcut_4llc6")
text = "1. Joy"

[node name="SurpriseButton" type="Button" parent="PanelContainer/MarginContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
shortcut = SubResource("Shortcut_x7xal")
text = "2. Surprise"

[node name="SadnessButton" type="Button" parent="PanelContainer/MarginContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
shortcut = SubResource("Shortcut_y5oke")
text = "3. Sadness"

[node name="AngerButton" type="Button" parent="PanelContainer/MarginContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
shortcut = SubResource("Shortcut_22e17")
text = "4. Anger"

[node name="FearButton" type="Button" parent="PanelContainer/MarginContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
shortcut = SubResource("Shortcut_4vsh6")
text = "5. Fear"

[node name="LoveButton" type="Button" parent="PanelContainer/MarginContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
shortcut = SubResource("Shortcut_17npo")
text = "6. Love"

[node name="UnknownButton" type="Button" parent="PanelContainer/MarginContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
shortcut = SubResource("Shortcut_rw2dl")
text = "7. Unknown"

[node name="PanelContainer2" type="PanelContainer" parent="."]
offset_right = 286.0
offset_bottom = 184.0
theme = ExtResource("3_4llc6")

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer2"]
layout_mode = 2
bbcode_enabled = true
text = "[b]Alternate Keybindings[/b]
[table=2]
[cell]Joy:[/cell][cell][code]1,  J[/code][/cell]
[cell]Surprise:[/cell][cell][code]2,  E, ![/code][/cell]
[cell]Sadness:[/cell][cell][code]3,  S[/code][/cell]
[cell]Anger:[/cell][cell][code]4,  A[/code][/cell]
[cell]Fear:[/cell][cell][code]5,  F[/code][/cell]
[cell]Love:[/cell][cell][code]6,  L[/code][/cell]
[cell]Unknown:[/cell][cell][code]7, U, ?, Space[/code][/cell]
[/table]"
fit_content = true

[connection signal="choice_made" from="." to="ExpressionLooper" method="_on_NextButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/ButtonContainer/JoyButton" to="." method="_on_joy_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/ButtonContainer/SurpriseButton" to="." method="_on_surprise_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/ButtonContainer/SadnessButton" to="." method="_on_sadness_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/ButtonContainer/AngerButton" to="." method="_on_anger_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/ButtonContainer/FearButton" to="." method="_on_fear_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/ButtonContainer/LoveButton" to="." method="_on_love_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/ButtonContainer/UnknownButton" to="." method="_on_unknown_button_pressed"]

[editable path="ExpressionLooper"]
